--- a/neudesic/index.html
+++ b/neudesic/index.html
@@ -73,7 +73,7 @@
 
 <!-- Details -->
 <section class="content-section bg-light" id="register">
-    <div class="container text-center">
+    <div class="container text-center" id="formtext">
         <div class="row">
             <div class="col-lg-10 mx-auto">
                 <h2>To Register, please fill this form</h2>
@@ -122,32 +122,39 @@
             </div>
         </div>
     </div>
+    <div class="container text-center thanks" id="donetext">
+      <h2>Thank you, you will recieve an invite link shortly</h2>
+    </div>
 </section>
 
 
 <!--Contact -->
 <section class="content-section bg-white text-black" id="contact">
-    <div class="container text-center">
-        <h1 class="mb-1">For more information</h1><br>
-        <div class="row no-gutters">
-            <div class="col-lg-6">
-                <img src="img/sid.jpg" class="contactimg">
-                <h2><br>Siddharth Shivkumar</h2>
-                <h3 class="mb-5">
-                    <em>Phno: 7012742097<br></em>
-                    <em class="small">siddharthshiv2798@gmail.com<br></em>
-                </h3>
-            </div>
-            <div class="col-lg-6">
-                <img src="img/akul1.jpg" class="contactimg">
-                <h2><br>Akul Santhosh</h2>
-                <h3 class="mb-5">
-                    <em>Phno: 7012094615<br></em>
-                    <em>akul753@gmail.com<br></em>
-                </h3>
-            </div>
-        </div>
+  <div class="container text-center">
+    <h1 class="mb-1">For more information</h1><br>
+    <div class="row no-gutters">
+      <div class="col">
+      <h2><br>Email at:<br>resume.india@neudesic.com</h2>
     </div>
+    </div>
+    <div class="row no-gutters">
+      <div class="col-lg-6">
+        <br>
+        <h2><br>Siddharth Shivkumar</h2>
+        <h3 class="mb-5">
+          <em>Phno: 7012742097<br></em>
+          <em class="small">siddharthshiv2798@gmail.com<br></em>
+        </h3>
+      </div>
+      <div class="col-lg-6">
+        <h2><br>Akul Santhosh</h2>
+        <h3 class="mb-5">
+          <em>Phno: 7012094615<br></em>
+          <em>akul753@gmail.com<br></em>
+        </h3>
+      </div>
+    </div>
+  </div>
 </section>
 
 
